--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-# .gitignore
-
+# Svelte
 .idea
 .DS_Store
 .vscode
@@ -23,3 +22,28 @@ node_modules
 _actual*.*
 _output
 /types
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
